@@ -3,66 +3,12 @@ import sys
 import os
 import json
 import py
-import subprocess
 import logging
 from devpi_common.validation import normalize_name
 from devpi_common.metadata import Version, splitbasename, BasenameMeta
-from devpi_server.main import fatal, server_version
-from devpi_server.venv import create_server_venv
+from devpi_server.main import fatal
 import devpi_server
 
-
-def do_upgrade(xom):
-    tw = py.io.TerminalWriter()
-    serverdir = xom.config.serverdir
-    exportdir = serverdir + "-export"
-    if exportdir.check():
-        tw.line("removing exportdir: %s" % exportdir)
-        exportdir.remove()
-    newdir = serverdir + "-import"
-    script = sys.argv[0]
-    def rel(p):
-        return py.path.local().bestrelpath(p)
-    state_version = xom.get_state_version()
-    tw.sep("-", "exporting to %s" % rel(exportdir))
-    if Version(state_version) > Version(server_version):
-        fatal("%s has state version %s which is newer than what we "
-              "can handle (%s)" %(
-                xom.config.serverdir, state_version, server_version))
-    elif Version(state_version) < Version(server_version):
-        tw.line("creating server venv %s ..." % state_version)
-        tmpdir = py.path.local.make_numbered_dir("devpi-upgrade")
-        venv = create_server_venv(tw, state_version, tmpdir)
-        tw.line("server venv %s created: %s" % (server_version, tmpdir))
-        venv.check_call(["devpi-server",
-                         "--serverdir", str(serverdir),
-                         "--export", str(exportdir)])
-    else:
-        #tw.sep("-", "creating venv" % rel(exportdir))
-        subprocess.check_call([sys.executable, script,
-                               "--serverdir", str(serverdir),
-                               "--export", str(exportdir)])
-    tw.sep("-", "importing from %s" % rel(exportdir))
-    tw.line("importing into server version: %s" % server_version)
-    subprocess.check_call([sys.executable, script,
-                           "--serverdir", str(newdir),
-                           "--import", str(exportdir)])
-    tw.sep("-", "replacing serverstate")
-    backup_dir = serverdir + "-backup"
-    if backup_dir.check():
-        tw.line("backup dir exists, not creating backup", bold=True)
-    else:
-        tw.line("moving serverstate to backupdir: %s" % (backup_dir), bold=True)
-        serverdir.move(backup_dir)
-    if serverdir.check():
-        tw.line("removing serverstate: %s" % (serverdir))
-        serverdir.remove()
-    tw.line("copying new serverstate to serverdir", bold=True)
-    newdir.move(serverdir)
-    serverdir.join(".serverversion").read()
-    tw.line("cleanup: removing exportdir: %s" % exportdir)
-    tw.line("have fun serving the new state :)")
-    exportdir.remove()
 
 def do_export(path, xom):
     path = py.path.local(path)
